Really Small Message Broker Changelog

22-Mar-2015
  - Added support for pre-defined topics and dynamic pre-defined topic names. 
  - In MQTT-SN PubAck send with "Rejected - Invalid topic ID" when topic name not
    found at message publish.
  - Fixed Eclipse bug 424704 - MQTT-SN broker forgets published topics.